--- a/views/index.mustache
+++ b/views/index.mustache
@@ -84,6 +84,7 @@
             <input class="input-small" type="text" placeholder="Username">
             <input class="input-small" type="password" placeholder="Password">
             <button class="btn" type="submit">Sign in</button>
+            <i class="icon user white"></i>
           </form>
         </div>
       </div>
