--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -83,13 +83,31 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-          {{#username}}
+          {{^username}}
           <form action="" class="form-search navbar-form pull-right">
             <input class="input-small" type="text" placeholder="Username">
             <input class="input-small" type="password" placeholder="Password">
             <button class="btn" type="submit">Sign in</button>
           </form>
           {{/username}}
+          {{#username}}
+<ul class="nav pills">
+  <li class="active"><a href="#">Regular link</a></li>
+  <li class="dropdown" id="menu1">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
+      Dropdown
+      <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+      <li><a href="#">Action</a></li>
+      <li><a href="#">Another action</a></li>
+      <li><a href="#">Something else here</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Separated link</a></li>
+    </ul>
+  </li>
+</ul>
+        {{/username}}
         </div>
       </div>
     </div>
