--- a/views/video.mustache
+++ b/views/video.mustache
@@ -10,7 +10,7 @@
 
         <video id="example_video_1" class="video-js
         vjs-default-skin" controls preload="none" width="640"
-        height="264" poster="myfile.mp4" data-setup="{}">
+        height="264" poster="{{source}}" data-setup="{}">
           <source src="{{source}}" type='video/mp4' />
         </video>
 
