--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -20,6 +20,7 @@
     <link href="/less/bootstrap.css" rel="stylesheet" type="text/css">
     <script src="/js/bootstrap-dropdown.js"></script>
     <script src="/js/bootstrap-modal.js"></script>
+    <script src="/js/bootstrap-button.js"></script>
 
     <style type="text/css">
       /* Override some defaults */
@@ -118,20 +119,22 @@
     {{{yield}}}
 
     <div class="modal fade" id="upload-modal">
-      <div class="modal-header">
-        <a class="close" data-dismiss="modal">×</a>
-        <h3>Upload a video</h3>
-      </div>
-      <div class="modal-body">
-        <form method="post" enctype="multipart/form-data" action="/file-upload">
-            <input type="file" name="video">
-            <input type="submit">
-        </form>
-      </div>
-      <div class="modal-footer">
-        <a href="#" class="btn primary">Save changes</a>
-        <a href="#" class="btn">Close</a>
-      </div>
+      <form method="post" enctype="multipart/form-data" action="/file-upload">
+        <div class="modal-header">
+          <a class="close" data-dismiss="modal">×</a>
+          <h3>Upload a video</h3>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" id="MAX_FILE_SIZE" name="MAX_FILE_SIZE" value="300000" />  
+          <input class="btn" type="file" name="video">
+        </div>
+        <div class="modal-footer">
+          <button id="upload-btn" data-loading-text="uploading..." class="btn primary">
+            Upload
+          </button>
+          <a href="#" class="btn">Close</a>
+        </div>
+      </form>
     </div>
 
   </body>
