--- a/views/video.mustache
+++ b/views/video.mustache
@@ -2,7 +2,7 @@
 
   <div class="content">
     <div class="page-header">
-      <h1>Page name <small>Supporting text or tagline</small></h1>
+      <h1>{{Title}} <small>{{author}}</small></h1>
     </div>
     <div class="row">
       <div class="span7">
