--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -95,7 +95,7 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
           {{^username}}
-          <form method="post" action="/sign-in" class="form-search navbar-form pull-right">
+          <form method="post" action="/sign-in" class="form-search navbar-form pull-right" id="sign-in-form">
             <input class="input-small" type="text" placeholder="Username">
             <input class="input-small" type="password" placeholder="Password">
             <button class="btn" type="submit" id="sign-in-btn">Sign in</button>
@@ -106,7 +106,7 @@
           <ul class="nav pull-right">
             <li class="dropdown" id="menu1">
               <a class="dropdown-toggle" data-toggle="dropdown">
-                Account
+                {{username}}
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
