removed bug in sign-up form

--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -144,7 +144,7 @@
     </div>
 
     <div class="modal fade" id="signup-modal">
-      <form method="post" enctype="multipart/form-data" action="/signup">
+      <form method="post" action="/signup">
         <div class="modal-header">
           <a class="close" data-dismiss="modal">×</a>
           <h3>Signup</h3>
