--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -30,6 +30,11 @@
       body {
         padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
       }
+
+      form {
+        margin-bottom: 0;
+      }
+
       .container > footer p {
         text-align: center; /* center align it with the container */
       }
@@ -74,13 +79,13 @@
       }
     </style>
 
+    <script src="/js/main.js"></script>
+
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-
-    <script src="/js/main.js"></script>
   </head>
 
   <body>
