--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -143,7 +143,7 @@
           <button id="upload-btn" data-loading-text="uploading..." class="btn primary">
             Upload
           </button>
-          <a href="#" class="btn">Close</a>
+          <a href="#" class="btn" data-dismiss="modal">Close</a>
         </div>
       </form>
     </div>
@@ -164,7 +164,7 @@
           <button id="signup-btn" data-loading-text="uploading..." class="btn primary">
             Submit
           </button>
-          <a href="#" class="btn">Close</a>
+          <a href="#" class="btn" data-dismiss="modal">Close</a>
         </div>
       </form>
     </div>
