--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -155,10 +155,13 @@
           <h3>Signup</h3>
         </div>
         <div class="modal-body">
-          <p id="signup-error" class="error">HEYHEY</p>
-          <input placeholder="username" type="text" id="signup-username"/><br>
-          <input placeholder="email" type="text" id="signup-email"/><br>
-          <input placeholder="password" type="password" id="signup-password"/>
+          <p id="signup-error" class="error"></p>
+          <input placeholder="username" type="text" id="signup-username"
+          name="username"/><br>
+          <input placeholder="email" type="text" id="signup-email"
+          name="email"/><br>
+          <input placeholder="password" type="password" id="signup-password"
+          name="password"/>
         </div>
         <div class="modal-footer">
           <button id="signup-btn" data-loading-text="uploading..." class="btn primary">
