--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -99,28 +99,29 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-          {{^username}}
-          <form method="post" action="/sign-in" class="form-search navbar-form pull-right" id="sign-in-form">
+          {{^user}}
+          <form method="post" action="/login" class="form-search navbar-form pull-right" id="login-form">
             <input class="input-small" type="text" placeholder="Username">
             <input class="input-small" type="password" placeholder="Password">
-            <button class="btn" type="submit" id="sign-in-btn">Sign in</button>
+            <button class="btn" type="submit" id="login-btn">Sign in</button>
             <button class="btn" type="submit" data-toggle="modal" data-target="#signup-modal">Sign up</button>
           </form>
-          {{/username}}
-          {{#username}}
+          {{/user}}
+          {{#user}}
           <ul class="nav pull-right">
             <li class="dropdown" id="menu1">
               <a class="dropdown-toggle" data-toggle="dropdown">
-                {{username}}
+                {{user.login}}
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
                 <li><a href="#">Manage subscription</a></li>
                 <li><a data-toggle="modal" href="#" data-target="#upload-modal">Upload file</a></li>
+                <li><a href="\logout">Logout</a></li>
               </ul>
             </li>
           </ul>
-          {{/username}}
+          {{/user}}
         </div>
       </div>
     </div>
@@ -157,11 +158,11 @@
         <div class="modal-body">
           <p id="signup-error" class="error"></p>
           <input placeholder="username" type="text" id="signup-username"
-          name="username"/><br>
+          name="{{everyauth.password.loginFormFieldName}}"/><br>
           <input placeholder="email" type="text" id="signup-email"
           name="email"/><br>
           <input placeholder="password" type="password" id="signup-password"
-          name="password"/>
+          name="{{everyauth.password.passwordFormFieldName}}"/>
         </div>
         <div class="modal-footer">
           <button id="signup-btn" data-loading-text="uploading..." class="btn primary">
